--- a/style.css
+++ b/style.css
@@ -18,14 +18,23 @@ input {
 }
 h1 {
     margin-top: 0px;
+    color: white;
 }
 button {
     font-size: 18px;
     text-align: center;
     width: 150px;
     height: auto;
+    color:black;
+    background-color: grey;
+    border-radius: 6px;
 }
 h6 {
     text-align: right;
     margin-bottom: -10px;
+    text-decoration: wavy;
+    color: white;
+}
+#resultado{
+    color: white;
 }
